# kubecon-eu-2025

./: LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
filter-json/guest-go/: Makefile  go.mod  go.sum  main.go
filter-json/guest-rust/: .gitignore  Cargo.toml  Makefile
filter-json/guest-rust/src/: lib.rs
filter-json/guest-tinygo/: Makefile  go.mod  go.sum  main.go
filter-json/host/: Makefile  benchmark_test.go  go.mod  go.sum  main.go
filter-native/go/: Makefile  benchmark_test.go  go.mod  go.sum  main.go
filter-proto/guest-go/: .gitignore  Makefile  go.mod  go.sum  main.go
filter-proto/guest-rust/: Cargo.toml  Makefile  build.rs
filter-proto/host/: .gitignore  Makefile  benchmark_test.go  go.mod  go.sum  main.go
filter-proto/host/protos/filter/: filter.proto
filter-vtproto/guest-go/: .gitignore  Makefile  go.mod  go.sum  main.go
filter-vtproto/guest-rust/: Cargo.toml
filter-vtproto/guest-rust/src/: lib.rs
filter-vtproto/host/: .gitignore  Makefile  benchmark_test.go  go.mod  go.sum  main.go
