[package]
name = "filter-json-guest-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.3.0"
chrono = { version = "0.4.40", features = ["serde"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
typify = "0.3.0"
