[package]
name = "filter-proto-guest-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.3.0"
prost = "0.13.5"
regex = "1"

[build-dependencies]
prost-build = "0.13.5"
